src/tests/ui/err-01.stderr
error[E0277]: the trait bound `Bobo: Fatality` is not satisfied
  --> tests/ui/err-01.rs:29:24
   |
29 | #[derive(Debug, Error, Fatality)]
   |                        ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Fatality` is not implemented for `Bobo`
  --> tests/ui/err-01.rs:27:1
   |
27 | struct Bobo;
   | ^^^^^^^^^^^
help: the trait `Fatality` is implemented for `Kaboom`
  --> tests/ui/err-01.rs:29:24
   |
29 | #[derive(Debug, Error, Fatality)]
   |                        ^^^^^^^^
   = note: this error originates in the derive macro `Fatality` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-01.rs:40:12
   |
39 | fn iffy() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
40 |     Err(Fatal)?
   |     ----------^ the trait `From<Fatal>` is not implemented for `Kaboom`
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Fatal>`
   |
note: `Kaboom` needs to implement `From<Fatal>`
  --> tests/ui/err-01.rs:30:1
   |
30 | enum Kaboom {
   | ^^^^^^^^^^^
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
help: the trait `From<Fatal>` is not implemented for `Kaboom`
      but trait `From<Bobo>` is implemented for it
  --> tests/ui/err-01.rs:29:17
   |
29 | #[derive(Debug, Error, Fatality)]
   |                 ^^^^^
   = help: for that trait implementation, expected `Bobo`, found `Fatal`
   = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
